@@ -29,6 +29,8 @@ Major changes since man-db 2.5.9:
 	o The -s option to whatis and apropos now takes a colon- or
 	  comma-separated list of sections, similar to 'man -S'.
 
+	o mandb error output is neater when stderr is not a terminal.
+
 man-db 2.5.9 (17 November 2010)
 ===============================
 
