@@ -1,3 +1,9 @@
+Thu Dec 23 16:00:06 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/check_mandirs.c (testmandirs): Make output neater when stderr
+	  is not a tty.  Suggested by C W Rose.
+	* NEWS: Document this.
+
 Thu Dec 23 15:50:39 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/lexgrog.l (glyphs, perldocs): Remove terminating NULL entries;
